--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="7JeFJrD2cqI0bkm-oqG0pAToSre2AblVq4c5xeDEaDk" />
     <link rel="icon" href="Favicon-techboard-roxo.svg" type="image/svg+xml">
 
     <link rel="stylesheet" href="css/style.css">
