--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <header>
-        <img src="img/Logo-techboard-branco.png" alt="Logo techboard na cor branco">
+        <img src="img/Logo-techboard-branco.png" alt="Logo Techboard App na cor branco">
     </header>
     <main>
         <section>
@@ -27,7 +27,7 @@
         </h1>
             <p>Monitoramento em tempo real com alertas inteligentes para sua aplicação nunca sair do ar sem você saber.</p>
             <a href="#" title="Teste a versão demo do app Techboard">Testar versão demo</a>
-            <img src="img/celulares-sobrepostos-desktop.png" alt="Dois celulares pretos sobrepostos com uma sombra roxa sob eles">
+            <img src="img/celulares-sobrepostos-desktop.png" alt="Tela do App Techboard em dois celulares pretos sobreepostos, com destaque para o hub de enventos de tecnologia.">
         </section>
     </main>
 </body>
