--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-site-verification" content="7JeFJrD2cqI0bkm-oqG0pAToSre2AblVq4c5xeDEaDk" />
     <meta name="description" content="Techboard App - monitore suas aplicações em tempo real, para que elas nunca saiam do ar sem você saber">
+    <meta name="og:title" content="Techboard App">
+    <meta name="og:description" content="Monitore suas aplicações em tempo real, para que elas nunca saiam do ar sem você saber">
+    <meta name="og:image" content="https://guichosta.github.io/Techboard/img/celulares-sobrepostos-desktop.png">
+    <meta name="og:type" content="website">
+    <meta name="og:url" content="https://guichosta.github.io/Techboard/">
     <link rel="icon" href="Favicon-techboard-roxo.svg" type="image/svg+xml">
 
     <link rel="stylesheet" href="css/style.css">
